--- a/notebook/problems.es.ipynb
+++ b/notebook/problems.es.ipynb
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "eecad0ca",
    "metadata": {},
    "outputs": [
@@ -132,7 +132,7 @@
     }
    ],
    "source": [
-    "# TODO\n",
+    "# TODO M\n",
     "\n",
     "import numpy as np\n",
     "from scipy.stats import f_oneway\n",
